MB-58350: Make the Connection's bucket name visible in minidumps

This will aid in debugging similar crashes in the future.

Change-Id: Id153159cc5ca20ab5c6d48d4ca7fbb8ae960e60c
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/197422
Tested-by: Vesko Karaganev <vesko.karaganev@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>